@@ -3,6 +3,7 @@
 - visualization of target block of a route, the locomotive is shown with the color green
 - instead of arrows (i.e. '>' and '<') letters are shown (i.e. 'F' and 'B') for providing information in which direction a locomotive is driving, i.e. F:=Forward and B:=Backward
 - allow to Lock/Unlock specific Locomotives, therfor they will not be started automatically within Automode
+- allow to open the project directory direct by using the "Project / Show Project Directory"
 
 2017 September 2nd
 ------------------
